# team_interviews

./: .gitignore  Interview.ipynb  README.md  pyproject.toml  requirements.txt
cloud_engineer/: cloud_engineer.ipynb
data_engineer/: README.md  interview.ipynb
data_engineer/cloud_data_engineer/q1/: data.tsv  interview.ipynb  mappings.json
data_engineer/cloud_data_engineer/q2/: columns.csv  data.tsv
data_engineer/cloud_data_engineer/q3/data/: data-2.tsv  data-5.tsv  data-6.tsv  data-9.tsv
data_engineer/q1/: columns.csv  data.tsv
data_engineer/q3/: columns.csv  mappings.json
data_engineer/q3/data/: data-1.tsv  data-10.tsv  data-5.tsv  data-7.tsv  data-8.tsv
data_engineer/sql/: SQL_questions.ipynb
data_scientist/: Interview.ipynb
ml_engineer/: Algos.ipynb  Untitled.ipynb
software_engineer/: data_generator.ipynb
software_engineer/q1/: mappings.json
software_engineer/q2/: columns.csv  data.tsv  mappings.json
software_engineer/q3/: mappings.json
software_engineer/q3/data/: data-1.tsv  data-2.tsv  data-3.tsv  data-6.tsv  data-7.tsv  data-8.tsv  data-9.tsv
software_engineer/sql/: SQL_questions.ipynb  sql_questions.md
