[tool.poetry]
name = "team_interviews"
version = "0.1.0"
description = ""
authors = ["Eugene Kim <46533009+MagicalGenie@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.4"
boto3 = "^1.17.71"
sklearn = "^0.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
